--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('footer.css');
+
 /* 
 *
 * Base Styles
@@ -49,6 +51,11 @@ nav {
   display: flex;
 }
 
+a {
+  text-decoration: none;
+  color: inherit
+}
+
 .nav-list {
   gap: 2rem;
   display: flex;
@@ -59,6 +66,15 @@ nav {
 
 .nav-element {
   cursor: pointer;
+  opacity: 0.8;
+  padding-bottom: 0.2rem;
+  border-bottom: 1px solid rgba(0,0,0,0);
+  transition: opacity 0.15s, border-bottom 0.15s;
+}
+
+.nav-element:hover {
+  border-bottom: 1px solid rgba(255,255,255,1);
+  opacity: 1;
 }
 
 /* 
