--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ a {
   cursor: pointer;
   opacity: 0.8;
   padding-bottom: 0.2rem;
+  color: rgb(255,255,255);
   border-bottom: 1px solid rgba(0,0,0,0);
   transition: opacity 0.15s, border-bottom 0.15s;
 }
