--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
+@import url('header.css');
 @import url('footer.css');
+
+@font-face {
+  font-family: Merriweather;
+  src: url('../fonts/Merriweather-Regular.ttf');
+}
 
 /* 
 *
@@ -16,7 +22,7 @@ body {
   line-height: inherit;
   margin-left: auto;
   margin-right: auto;
-  max-width: 48rem; /* Max width */
+  max-width: 48rem;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -25,57 +31,11 @@ body {
   padding-right: 2rem;
   background-color: rgb(15, 15, 16);
   color: white;
-  min-width: 320px; /* Set minimum width for body */
+  min-width: 320px;
 }
 
-/* 
-*
-* Header and Navigation
-*
-*/
-
-
-header {
-  backdrop-filter: blur(4px);
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-  z-index: 90000;
-  top: 0;
-  position: sticky;
-  border: 0 solid rgb(255,255,255);
-}
-
-nav {
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
-}
-
-a {
-  text-decoration: none;
-  color: inherit
-}
-
-.nav-list {
-  gap: 2rem;
-  display: flex;
-  list-style: none;
-  margin: none;
-  padding: none;
-}
-
-.nav-element {
-  cursor: pointer;
-  opacity: 0.8;
-  padding-bottom: 0.2rem;
-  color: rgb(255,255,255);
-  border-bottom: 1px solid rgba(0,0,0,0);
-  transition: opacity 0.15s, border-bottom 0.15s;
-}
-
-.nav-element:hover {
-  border-bottom: 1px solid rgba(255,255,255,1);
-  opacity: 1;
+h1, h2, h3, h4, h5, h6 {
+  font-family: Merriweather;
 }
 
 /* 
