--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,12 +333,14 @@ main {
   font-weight: 600;
   margin: 0;
   font-size: inherit;
+
 }
 
 .project-description {
   font-size: .75rem;
   line-height: 1rem;
   max-width: 100%;
+  color: rgba(255,255,255, 0.55)
 }
 
 .tech-stack-used-for-project {
@@ -360,14 +362,59 @@ main {
 }
 
 .technology-of-project {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
   font-size: 10px;
-  padding: 0 .25rem 0 .25rem;
-  background-color: rgb(28, 28, 30);
-  border-radius: 2px;
+  padding: .2rem .27rem .2rem .27rem;
+  background-color: rgb(26, 26, 28);
+  border-radius: 5px;
   align-items: center;
   display: inline-flex;
+  transition: background-color 0.15s;
 }
+
+.technology-of-project:hover {
+  background-color: rgb(23, 23, 25);
+}
+
+.tech-demo-wrapper {
+  gap: .25rem;
+  align-items: flext-start;
+  flex-wrap: wrap;
+  flex-direction: row;
+  display: flex;
+}
+
+.tech-demo-container {
+  font-weight: 600;
+  font-size: 10px;
+  padding: .3rem .55rem .3rem .55rem;
+  background-color: rgb(255, 255, 255);
+  border: 1px transparent;
+  border-radius: 4px;
+  gap: .5rem;
+  align-items: center;
+  display: flex;
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  transition: background-color 0.15s;
+}
+
+.tech-demo-container img {
+  width: 1rem;
+  height: 1rem;
+  display: block;
+}
+
+.tech-demo-container:hover {
+  background-color: rgb(219, 219, 226);
+}
+
+.tech-demo-container:active {
+  background-color: rgb(188, 188, 197);
+}
+
+
 
 
 
